# blocklint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml  pre-commit.yml  tox.yml
blocklint/: __init__.py  __main__.py  main.py
integration/: README.md
integration/ale/: README.md
integration/vim/: README.md
integration/vim/autoload/: blocklint.vim
integration/vim/doc/: blocklint.txt
integration/vim/plugin/: blocklint.vim
src/blocklint/: __init__.py  __main__.py  main.py
tests/: .blocklint  acceptance_test.sh  test_configfiles.sh  test_main.py  test_max_issue_threashold.sh  test_max_issue_threshold.sh
tests/config_tests/flag_and_list/: tox.ini
tests/config_tests/setup/: setup.cfg
tests/config_tests/setup_blocklint/: .blocklint
tests/config_tests/skip_files/: tox.ini
tests/config_tests/tox_setup/: setup.cfg
tests/docstring_tests/: docstring_test_file.py  test_docstring_processing.py
tests/docstring_tests/sample_files/: docstring_test_file_1.py  docstring_test_file_2.py
tests/sample_files/: blocklist.txt  default.txt  end.txt  exactlist.txt  pragma.txt  stdin.txt  stdin_wordlist.txt  test.cc  test.py  test.txt  test_pragma.cc  test_pragma.py  test_pragma.txt  wordlist.txt
