[project]
name = "blocklint"
version = "0.3.0"
description = "Source code linting for inclusive language"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
blocklint = "blocklint.__main__:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
