[metadata]
name = blocklint
author = Troy Comi
author_email=tcomi@princeton.edu
url = https://github.com/PrincetonUniversity/blocklint
description = Lint for blocklisted words.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities

[options]
python_requires = >=2.7, !=3.0, !=3.1, !=3.2, !=3.3, !=3.4
packages = find:

[options.packages.find]
exclude =
    tests
    integration

[options.extras_require]
test =
    tox
    pytest
    pytest-mock

[options.entry_points]
console_scripts =
    blocklint = blocklint.main:main

[tool:pytest]
junit_family=xunit2
testpaths =
    tests

[bdist_wheel]
universal=1
